<resources>
    <string name="app_name">doyouknowkoko</string>
    <string name="outfit_name">Название</string>
    <string name="outfit_brand">Бренд</string>
    <string name="outfit_size">Размер</string>
    <string name="outfit_comment">Описание</string>
    <string name="outfit_price">Цена</string>
    <string name="add">Добавить</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
</resources>